# example_fastapi_oauth_provider

./: .gitignore  LICENSE  README.md  alembic.ini  config.py  database.py  dep.py  docker-compose.yml  main.py  models.py  oauth2.py  oauth_client.py  pyproject.toml  routes.py  schema.py  session.py  template.py
migrations/: env.py
migrations/versions/: 202210231540_create_base_tables.py
templates/: authorize.html.jinja2  create_client.html.jinja2  home.html.jinja2
